# csvql

./: .gitignore  LICENSE  README.md  asdf.csv  csvql.cabal  csvql.y  scanner.x
src/: Parser.y  Parser2.hs  Scanner.x  main.hs
