name:                   csvql
version:                0.1.0.0

--synopsis
--description
license:                MIT
license-file:           LICENSE
author:                 Emmanuel Sales <emsal1863@gmail.com>
maintainer:             (none)
build-type:             Simple
cabal-version:          >=1.10

executable csvql
    main-is:            main.hs
    hs-source-dirs:     src
    other-modules:      Scanner, Parser, Parser2
    build-depends:      base >=4.7
                    ,   bytestring
                    ,   array
                    ,   parsec
    build-tools:        happy, alex 
    default-language:   Haskell2010
